# react-native-temporal

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  Temporal.podspec  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
android/: build.gradle  gradle.properties
android/src/main/java/com/temporal/: TemporalModule.kt  (+2 more)
example/: app.json  index.js  package.json  rn-harness.config.mjs
example/android/: settings.gradle
example/android/app/: build.gradle
example/ios/: Podfile
example/ios/TemporalExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/TemporalExample.xcodeproj/: project.pbxproj
example/ios/TemporalExample.xcodeproj/xcshareddata/xcschemes/: TemporalExample.xcscheme
example/src/: App.tsx
example/src/__tests__/: calendar.harness.ts  duration.harness.ts  instant.harness.ts  now.harness.ts  plain_date.harness.ts  plain_date_time.harness.ts  plain_month_day.harness.ts  plain_time.harness.ts  plain_year_month.harness.ts  time_zone.harness.ts  zoned_date_time.harness.ts
ios/: Temporal.h  Temporal.mm  temporal_rn.h
rust/temporal-rn/: Cargo.toml  cbindgen.toml
rust/temporal-rn/src/: lib.rs
scripts/: build-all.sh  build-android.sh  build-ios.sh
src/: NativeTemporal.ts  index.tsx  polyfill.ts  utils.ts
src/__tests__/: PlainDateTime.test.tsx  PlainMonthDay.test.tsx  PlainYearMonth.test.tsx  TimeZone.test.tsx  ZonedDateTime.test.tsx
src/types/: Calendar.ts  Duration.ts  Instant.ts  Now.ts  PlainDate.ts  PlainDateTime.ts  PlainMonthDay.ts  PlainTime.ts  PlainYearMonth.ts  TimeZone.ts  ZonedDateTime.ts
(+3 files in other folders)
